# FlaskOIDC

./: .gitignore  MANIFEST.in  README.md  app.py  config_sample.py  requirements.txt  setup.cfg
FlaskOIDC/: FlaskOIDC.py  JWKS.py  __init__.py  flask_utils.py  oidc_discover.py  oidc_state.py
examples/: config_sample.py
src/: FlaskOIDC
