[metadata]
name=Flask-OIDC-SP
version=22.02.27
author = gunville
author_email = rk13088@yahoo.com
description = OIDC Service Provider for Flask applications
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
url = https://github.com/Glocktober/FlaskOIDC
project_urls =
    repo = https://github.com/Glocktober/FlaskOIDC
    overview = https://github.com/Glocktober/FlaskOIDC/blob/main/README.md
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Bottle
keywords='flask oidc authentication'
[options]
package_dir = 
    = src
packages = find:
install_requires =
    Flask>=2.0.0
    Flask-Session>=0.4.0
    PyJWT>=2.1.0
    requests>=2.26.0
    cryptography>=3.0
python_requires = >=3.6
scripts=
    scripts/example_flask_oidc_app.py
[options.data_files]
examples = 
    examples/app.py
    examples/config_sample.py
[options.packages.find]
where = src

